# ASFOTEC-MLStack

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  LOCAL_DEV_GUIDE.md  Makefile  README.md  TRAINING_PIPELINE.md  asfotec_init.sh  feature_importance.csv  feature_pipeline.py  feature_schema.json  pyproject.toml  training_sample.csv
.github/workflows/: ci_cd.yml
apps/api/: __init__.py  main.py  schemas.py
apps/api/config/: settings.py
apps/api/routers/: classifier.py  llm.py  meta.py  metrics.py
apps/api/services/: __init__.py  llm_orchestrator.py  metrics_collector.py  metrics_service.py  model_service.py
apps/ui/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/ui/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/ui/app/architecture/: page.tsx
apps/ui/app/classifier/: page.tsx
apps/ui/app/health/: page.tsx
apps/ui/app/kafka/: page.tsx
apps/ui/app/llm/: page.tsx
apps/ui/app/metrics/: page.tsx
apps/ui/app/models/: page.tsx
apps/ui/components/architecture/: mermaid-diagram.tsx  (+1 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOY_CLOUD_RUN.md  MLOPS_PIPELINE.md  RAG_DESIGN.md
infra/docker/: docker-compose.dev.yml  mlflow.Dockerfile
infra/terraform/: main.tf  outputs.tf  variables.tf
mlops/: __init__.py  config.py  eval_classifier.py  quality_gate.py  run_all.py  utils.py
mlops/training/: train_classifier.py
rag/: __init__.py  config.py  ingest.py  service.py
rag/docs/: asfotec_job.md  project_architecture.md
scripts/: kafka_consumer.py
tests/: test_api.py  test_mlops.py
(+21 files in other folders)
